<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto"> so it recognizes the xliff tags -->

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="weatherApiBaseUrl" translatable="false"><![CDATA[http://api.openweathermap.org/data/2.5/forecast/daily]]></string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Weather Details</string>
    <string name="pref_location_key" translatable="false" >location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">London</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="settings_activity_name">Settings</string>
    <string name="view_location">View Location</string>
    <string name="action_share">Share</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temperature">
        <xliff:g id="temp">%.0f</xliff:g>\u00B0
    </string>

</resources>
